--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/java/org/kie/workbench/common/stunner/client/widgets/canvas/actions/TextEditorInLineBox.css
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/java/org/kie/workbench/common/stunner/client/widgets/canvas/actions/TextEditorInLineBox.css
@@ -2,6 +2,7 @@
     position: absolute;
     background-color: white;
     min-width: 100px;
+    width: 100px;
     border: 1px solid #0099d3;
 
 }
@@ -13,13 +14,14 @@
     overflow-wrap: break-word;
     font-family: Arial, sans-serif;
     font-size: 16px;
-    min-width: 100px;
+    width: 100px;
     font-weight: normal;
     line-height: 1.2;
     top: 50%;
     text-align: center;
     transform: translate(0, -50%);
-    border: 1px solid #0099d3;
+    border-top: 1px solid #0099d3;
+    border-bottom: 1px solid #0099d3;
 }
 
 [contenteditable] {
