DROOLS-4210: [DMN Designer] Documentation - Show DMNExternalLinks into the Documentation

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/template/dmn-documentation-template.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/template/dmn-documentation-template.html
@@ -113,6 +113,10 @@
             border-bottom: 1px solid #DDDDDD;
         }
 
+        .kie-dmn-documentation .external-links-title {
+            font-weight: bold;
+        }
+
         @media screen {
 
             .kie-print-preview-screen {
@@ -224,6 +228,23 @@
             {{/drdType}}
         </h4>
         <p>{{drdDescription}}</p>
+        <ul class="data-types">
+            {{#hasExternalLinks}}
+            <p class="external-links-title">{{i18n.externalLinks}}</p>
+            {{/hasExternalLinks}}
+            {{#drdExternalLinks}}
+            <li style="padding-left: calc(30px * {{level}})">
+                {{#isTopLevel}}
+                &#9656;&nbsp;
+                {{/isTopLevel}}
+                <span>{{description}}</span>
+                <a href="{{url}}">({{url}})</a>
+            </li>
+            {{/drdExternalLinks}}
+            {{^drdExternalLinks}}
+            <li class="no-results">{{i18n.noExternalLinks}}</li>
+            {{/drdExternalLinks}}
+        </ul>
         {{#drdBoxedExpressionImage}}
         <img src="{{drdBoxedExpressionImage}}" alt="{{drdName}}" class="diagram-image"/>
         {{/drdBoxedExpressionImage}}
