--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/template/dmn-documentation-template.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/template/dmn-documentation-template.html
@@ -64,6 +64,10 @@
             color: #717171;
         }
 
+        .kie-dmn-documentation ul.data-types li span.normal {
+            font-weight: normal;
+        }
+
         .kie-dmn-documentation ul.data-types li:last-child {
             border-bottom: 1px solid #E5EEF5;
         }
@@ -234,10 +238,7 @@
             {{/hasExternalLinks}}
             {{#drdExternalLinks}}
             <li style="padding-left: calc(30px * {{level}})">
-                {{#isTopLevel}}
-                &#9656;&nbsp;
-                {{/isTopLevel}}
-                <span>{{description}}</span>
+                <span class="normal">{{description}}</span>
                 <a href="{{url}}">({{url}})</a>
             </li>
             {{/drdExternalLinks}}
