--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/java/org/kie/workbench/common/widgets/client/assets/dropdown/KogitoKieAssetsDropdownView.less
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/java/org/kie/workbench/common/widgets/client/assets/dropdown/KogitoKieAssetsDropdownView.less
@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *       http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,8 +13,26 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.kie.workbench.common.kogito.api.resources.i18n;
 
-public class SubmarineAPIConstants {
+[data-i18n-prefix="KogitoKieAssetsDropdownView."] {
 
+  label,
+  .bootstrap-select,
+  .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+    width: 100%;
+    margin: 0;
+  }
+
+  .bootstrap-select {
+    .dropdown-menu {
+      .text {
+        font-weight: 600;
+      }
+
+      .text-muted,
+      .disabled .text {
+        font-weight: normal;
+      }
+    }
+  }
 }
