Data Types Vist View updates
-

* DROOLS-4615: [DMN Designer] Data Types - Persist data type list order into the DMN model

* DROOLS-4484: [DMN Designer] Data Types - Refactor the Data Types list to use a drag and drop mechanism

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListItemView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListItemView.less
@@ -15,24 +15,15 @@
  */
 
 [data-i18n-prefix="DataTypeListItemView."] {
-  height: 50px;
 
   &.list-group-item:hover {
     background: #eff8ff;
   }
 
   &.list-group-item {
-    border-color: #e2e4e3;
-    padding: 0 5px 0 0;
-  }
-
-  &.list-group-item.key-highlight {
-    background: #E5EEF5;
-  }
-
-  &.focused-data-type {
-    background: #eff8ff;
-    height: 72px;
+    border: 1px solid #e2e4e3;
+    height: 71px;
+    padding-left: 25px;
   }
 
   &.read-only {
@@ -78,23 +69,23 @@
   }
 
   .list-view-pf-main-info {
-    padding-top: 8px;
-    padding-bottom: 12px;
+    padding: 0;
+    height: 100%;
+
+    .list-view-pf-body {
+      padding-left: 24px;
+      position: relative;
+    }
 
     [data-type-field="arrow-button"] {
-      margin-left: -20px;
-      width: 55px;
-      display: inline-block
+      position: absolute;
+      left: 3px;
     }
 
     [data-type-field="type"] {
       display: inline-block;
       padding-right: 30px;
     }
-  }
-
-  .nesting-level {
-    height: 32px;
   }
 
   .collection-component {
@@ -114,16 +105,6 @@
     margin-top: -8px;
     padding-top: 2px;
     height: 40px;
-  }
-
-  &.focused-data-type {
-    .constraint-component {
-      padding-top: 5px;
-    }
-
-    .collection-component {
-      padding-top: 10px;
-    }
   }
 
   .list-view-pf-actions {
@@ -146,11 +127,12 @@
     font-weight: initial;
     opacity: .75;
     padding-bottom: 3px;
+    margin-top: -10px;
   }
 
   [data-type-field="save-button"],
   [data-type-field="close-button"] {
-    margin-top: 12px;
+    margin-top: 2px;
   }
 
   ul.dropdown-menu {
@@ -165,5 +147,32 @@
 
   button {
     outline: none;
+  }
+}
+
+[data-i18n-prefix="DNDListComponentView."] {
+
+  div[data-row-uuid] {
+
+    &.focused-data-type {
+      .list-group-item {
+        background: #eff8ff;
+        height: 72px;
+
+        .constraint-component {
+          padding-top: 5px;
+        }
+
+        .collection-component {
+          padding-top: 10px;
+        }
+      }
+    }
+
+    &.key-highlight {
+      .list-group-item {
+        background: #E5EEF5;
+      }
+    }
   }
 }
