--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/imported/ImportDataObjectModalView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/imported/ImportDataObjectModalView.less
@@ -14,47 +14,52 @@
  * limitations under the License.
  */
 
+.kie-import-data-object-modal-view-body {
+  #data-object-items-container {
+    height: 200px;
+    overflow-y: scroll;
+    border: 1px solid #DDD;
+    margin-top: 5px;
+    padding: 10px 0 0 0;
+  }
 
-#data-object-items-container {
-  height: 200px;
-  overflow-y: scroll;
-  border: 1px solid #DDD;
-  margin-top: 5px;
-  padding: 10px 0 0 0;
-}
-
-[data-field="note-label"] {
-  font-weight: 600;
-}
-
-[data-field="note-text"] {
-  font-style: italic;
-}
-
-[data-field="top-elements-container"] {
-  span {
+  [data-field="note-label"] {
     font-weight: 600;
   }
+
+  [data-field="note-text"] {
+    font-style: italic;
+  }
+
+  [data-field="top-elements-container"] {
+    span {
+      font-weight: 600;
+    }
+
+    div {
+      float: right;
+    }
+  }
+
+  [data-field="note-container"] {
+    i {
+      padding-bottom: 20px;
+      padding-left: 5px;
+    }
+
+    .col-md-1 {
+      width: 20px;
+      padding: 10px 0 0 30px;
+    }
+
+    .col-md-11 {
+      padding: 15px 0 0 30px;
+      line-height: 0.9em;
+    }
+  }
 }
 
-[data-field="note-container"] {
-  i {
-    padding-bottom: 20px;
-    padding-left: 5px;
-  }
-
-  .col-md-1 {
-    width: 20px;
-    padding: 10px 0 0 30px;
-  }
-
-  .col-md-11 {
-    padding: 15px 0 0 30px;
-    line-height: 0.9em;
-  }
-}
-
-.import-data-modal-footer {
+.kie-import-data-object-modal-view-footer {
   margin-top: -30px;
   margin-bottom: 10px;
 
