--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/resources/images/shapes/bpmn-shapes.css
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/resources/images/shapes/bpmn-shapes.css
@@ -116,15 +116,29 @@
     stroke: none;
 }
 
+.annotation_group_data_object {
+    opacity: 1;
+}
+
+.annotation_data_object_icon {
+    opacity: 1;
+    fill: #000000;
+}
+
 .annotation_data_object_main {
-    fill:none;
+    fill:white;
     stroke:#000000;
-    stroke-width:4;
-    stroke-linecap:round;
+    stroke-width:10;
+    stroke-linecap:square;
     stroke-linejoin:round;
-    stroke-miterlimit:1;
+    stroke-miterlimit:2;
     stroke-dasharray:0;
     stroke-opacity:1;
+}
+
+.annotation_data_object_fold {
+    fill:white;
+    stroke:none;
 }
 
 .task_group_user {
@@ -166,21 +180,6 @@
 .task_multiple_instance_icon {
     stroke: #000000;
     fill: #000000;
-}
-
-.annotation_group_data_object {
-    opacity: 1;
-}
-
-.annotation_data_object_icon {
-    opacity: 1;
-    fill: #000000;
-}
-
-.annotation_data_object_background {
-    fill: #FFFFFF;
-    stroke:#000000;
-    stroke-opacity:1;
 }
 
 #userTask .task_group_user {
