JBPM-7919 : Stunner - [BPMN] Support for Data Object and Association Fixed Bug in BC when saving SVG File and issue with curves and Data Object Type Issue

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/resources/images/shapes/bpmn-shapes.css
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/resources/images/shapes/bpmn-shapes.css
@@ -128,10 +128,9 @@
 .annotation_data_object_main {
     fill:white;
     stroke:#000000;
-    stroke-width:10;
-    stroke-linecap:square;
-    stroke-linejoin:round;
-    stroke-miterlimit:2;
+    stroke-width:7;
+    stroke-linejoin:miter;
+    stroke-miterlimit:1;
     stroke-dasharray:0;
     stroke-opacity:1;
 }
