--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/contextmenu/ContextMenuView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/contextmenu/ContextMenuView.less
@@ -14,8 +14,21 @@
  * limitations under the License.
  */
 
-[data-i18n-prefix="DRDContextMenuView."] {
-  .list-selector {
+[data-i18n-prefix="ContextMenuView."] {
+  .dropdown-menu {
+    .dropdown-header {
+      i {
+        margin-right: 3px;
+      }
+      span {
+        font-weight: 700;
+      }
+    }
 
+    li {
+      a:hover {
+        font-weight: 700;
+      }
+    }
   }
 }
