KOGITO-543: DMN - Read Only mode

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/DocumentationLinksWidget.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/DocumentationLinksWidget.less
@@ -46,4 +46,10 @@
   .container {
     height: auto;
   }
+
+  .read-only {
+    cursor: not-allowed;
+    pointer-events: none;
+    filter: grayscale(100%);
+  }
 }
