--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/DataTypePickerWidget.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/DataTypePickerWidget.less
@@ -27,4 +27,10 @@
     top: -24px;
     right: 0px;
   }
+
+  .read-only {
+    pointer-events: none;
+    cursor: not-allowed;
+    filter: grayscale(100%);
+  }
 }
