--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/resources/images/shapes/bpmn-shapes.css
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/resources/images/shapes/bpmn-shapes.css
@@ -401,6 +401,11 @@
     fill: #e5a000;
 }
 
+
+#intermediateSignalCatchingEvent #signal-catching {
+    opacity: 1;
+    fill: #e5a000;
+}
 #intermediateSignalCatchingEvent #event-background {
     opacity: 1;
     fill: #fbefcf;
@@ -413,10 +418,6 @@
     stroke-dasharray: 15, 15;
     stroke-width: 5px;
     stroke: #e5a000;
-}
-#intermediateLinkCatchingEvent #link-catching {
-    opacity: 1;
-    fill: #e5a000;
 }
 
 #intermediateLinkCatchingEvent #event-background {
