--- a/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-.expression-container .container-box {
+#expression-container-box {
   width: 170px;
   height: 50px;
   border-style: ridge;
@@ -29,9 +29,46 @@
   cursor: pointer;
 }
 
-.expression-container .container-box p,
+#expression-container-box,
 #expression-type {
   font-size: smaller;
   font-style: italic;
   color: gray;
+}
+
+.selector-menu .pf-c-button {
+  display: none;
+}
+
+.selector-menu .pf-c-popover__content,
+.selector-menu .pf-c-title,
+.selector-menu .pf-c-popover__content > .pf-c-button + *,
+#expression-actions .pf-c-dropdown .pf-c-dropdown__menu,
+#expression-actions-toggle {
+  padding: 0;
+}
+
+.selector-menu .pf-c-title .selector-menu-title {
+  border-bottom: none;
+  border-radius: 0;
+  color: #4d5258;
+  font-weight: 700;
+  min-height: 34px;
+  margin: 0;
+  padding: 8px 14px;
+}
+
+.selector-menu .pf-c-title .selector-menu-title,
+.selector-menu .pf-c-popover__arrow {
+  background-color: #f5f5f5;
+}
+
+.selector-menu .pf-c-title .selector-menu-title,
+.selector-menu .pf-c-simple-list button,
+#expression-actions .pf-c-dropdown a {
+  font-size: 13px;
+}
+
+#expression-actions .pf-c-dropdown button:focus {
+  outline-width: 0;
 }
