--- a/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-#expression-container-box {
+.expression-container #expression-container-box {
   width: 170px;
   height: 50px;
   border-style: ridge;
@@ -29,26 +29,26 @@
   cursor: pointer;
 }
 
-#expression-container-box,
-#expression-type {
+.expression-container #expression-container-box,
+.expression-container #expression-type {
   font-size: smaller;
   font-style: italic;
   color: gray;
 }
 
-.selector-menu .pf-c-button {
+.expression-selector-menu .pf-c-button {
   display: none;
 }
 
-.selector-menu .pf-c-popover__content,
-.selector-menu .pf-c-title,
-.selector-menu .pf-c-popover__content > .pf-c-button + *,
+.expression-selector-menu .pf-c-popover__content,
+.expression-selector-menu .pf-c-title,
+.expression-selector-menu .pf-c-popover__content > .pf-c-button + *,
 #expression-actions .pf-c-dropdown .pf-c-dropdown__menu,
 #expression-actions-toggle {
   padding: 0;
 }
 
-.selector-menu .pf-c-title .selector-menu-title {
+.expression-selector-menu .pf-c-title .selector-menu-title {
   border-bottom: none;
   border-radius: 0;
   color: #4d5258;
@@ -58,17 +58,17 @@
   padding: 8px 14px;
 }
 
-.selector-menu .pf-c-title .selector-menu-title,
-.selector-menu .pf-c-popover__arrow {
+.expression-selector-menu .pf-c-title .selector-menu-title,
+.expression-selector-menu .pf-c-popover__arrow {
   background-color: #f5f5f5;
 }
 
-.selector-menu .pf-c-title .selector-menu-title,
-.selector-menu .pf-c-simple-list button,
+.expression-selector-menu .pf-c-title .selector-menu-title,
+.expression-selector-menu .pf-c-simple-list button,
 #expression-actions .pf-c-dropdown a {
   font-size: 13px;
 }
 
-#expression-actions .pf-c-dropdown button:focus {
+.expression-container #expression-actions .pf-c-dropdown button:focus {
   outline-width: 0;
 }
