Avoid useless DOM operations

--- a/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
@@ -29,6 +29,10 @@
   cursor: pointer;
 }
 
+.expression-container #expression-container-box.logic-type-selected {
+  pointer-events: none;
+}
+
 .expression-container #expression-container-box,
 .expression-container #expression-type {
   font-size: smaller;
