Adding global CSS file

--- a/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
@@ -46,7 +46,7 @@
 }
 
 #expression-actions .pf-c-dropdown a {
-  font-size: 13px;
+  font-size: var(--small-font-size);
 }
 
 .expression-container #expression-actions .pf-c-dropdown button:focus {
