--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/widgets/decisionservice/parameters/DecisionServiceParametersListWidget.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/widgets/decisionservice/parameters/DecisionServiceParametersListWidget.less
@@ -14,5 +14,6 @@
  * limitations under the License.
  */
 [data-i18n-prefix="DecisionServiceParametersListWidget."] {
-  margin-top: -30px;
+  position: relative;
+  top: -30px;
 }
