Add in the showcase app the ability of rendering the current JSON related to expression definition

--- a/kie-wb-common-react/boxed-expression-editor/showcase/src/index.css
+++ b/kie-wb-common-react/boxed-expression-editor/showcase/src/index.css
@@ -24,3 +24,14 @@ body {
   display: -ms-flexbox;
   display: -webkit-flex;
 }
+
+.showcase {
+  display: flex;
+  justify-content: space-between;
+}
+
+.showcase .updated-json {
+  margin-left: 5em;
+  border-style: inset;
+  padding: 1em;
+}
