Expression container should have a padding (where to click on), instead of margin of contained element

--- a/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
@@ -34,6 +34,7 @@
 
 .expression-container > .expression-container-box.logic-type-selected {
   cursor: default;
+  padding: 10px;
 }
 
 .expression-container > .expression-container-box,
