Setting higher z-index for context-menu

--- a/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
@@ -30,6 +30,7 @@
 
 .expression-container .context-menu-container {
   position: absolute;
+  z-index: 10000;
 }
 
 .expression-container > .expression-container-box.logic-type-not-present {
