--- a/kie-wb-common-react/boxed-expression-editor/src/components/RelationExpression/RelationExpression.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/RelationExpression/RelationExpression.css
@@ -14,3 +14,24 @@
  * limitations under the License.
  */
 
+.relation-expression table th {
+  position: relative;
+  cursor: pointer;
+  /** Due to a glitch when resizing column, disabling user selection for header's cells */
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+.relation-expression table .pf-c-drawer {
+  --pf-c-drawer__splitter--after--BorderLeftWidth: var(
+    --pf-global--BorderWidth--sm
+  );
+  position: absolute;
+  min-width: 0.625rem;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
