--- a/kie-wb-common-react/boxed-expression-editor/src/components/RelationExpression/RelationExpression.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/RelationExpression/RelationExpression.css
@@ -14,11 +14,13 @@
  * limitations under the License.
  */
 
+.relation-expression table {
+  font-style: normal;
+}
+
 .relation-expression table th {
   position: relative;
   border-style: ridge;
-  font-style: normal;
-  cursor: pointer;
   /** Due to a glitch when resizing column, disabling user selection for header's cells */
   user-select: none;
   -webkit-touch-callout: none;
@@ -27,13 +29,23 @@
   -ms-user-select: none;
 }
 
-.relation-expression table tbody td {
-  border-style: ridge;
+.relation-expression table th .header-cell {
+  height: 3em;
+}
+
+.relation-expression table th .data-type {
+  font-style: italic;
+  font-size: smaller;
 }
 
 .relation-expression table th:not(:first-child) {
+  cursor: pointer;
   text-align: center;
   background-color: #DEF3FF;
+}
+
+.relation-expression table tbody td {
+  border-style: ridge;
 }
 
 .relation-expression table .pf-c-drawer__splitter {
