Supporting editable cells + column name/dataType update + Spread of updated relation definition

--- a/kie-wb-common-react/boxed-expression-editor/src/components/RelationExpression/RelationExpression.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/RelationExpression/RelationExpression.css
@@ -62,3 +62,10 @@
   top: 0;
   bottom: 0;
 }
+
+.relation-expression table tbody td textarea {
+  padding: 0.125em;
+  margin: 0;
+  border: 0;
+  width: 100%;
+}
