--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/TableHandlerMenu.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/TableHandlerMenu.css
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
-export * from "./EditableCell";
-export * from "./Table";
-export * from "./TableHandlerMenu";
+.table-handler-menu * {
+  font-size: small;
+}
+
+.table-handler-menu .no-allowed-actions-in-group {
+  display:  none;
+}
