--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-.table-component table {
+.expression-container .table-component table {
   font-style: normal;
 }
 
