--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -18,7 +18,7 @@
   font-style: normal;
 }
 
-.table-component table th {
+.expression-container .table-component table th {
   position: relative;
   border-style: ridge;
   /** Due to a glitch when resizing column, disabling user selection for header's cells */
@@ -29,42 +29,42 @@
   -ms-user-select: none;
 }
 
-.table-component table th .header-cell {
+.expression-container .table-component table th .header-cell {
   height: 3em;
 }
 
-.table-component table th .data-type {
+.expression-container .table-component table th .data-type {
   font-style: italic;
   font-size: smaller;
 }
 
-.table-component table th:not(:first-child) {
+.expression-container .table-component table th:not(:first-child) {
   cursor: pointer;
   text-align: center;
   background-color: #DEF3FF;
 }
 
-.table-component table tbody td {
+.expression-container .table-component table tbody td {
   border-style: ridge;
   padding: 1.1em 0;
   text-align: center;
 }
 
-.table-component table tbody td + td {
+.expression-container .table-component table tbody td + td {
   padding: 0;
 }
 
-.table-component table tbody td.row-count-cell {
+.expression-container .table-component table tbody td.row-count-cell {
   display: inline-block;
   box-sizing: border-box;
   width: 60px;
 }
 
-.table-component table .pf-c-drawer__splitter {
+.expression-container .table-component table .pf-c-drawer__splitter {
   background-color: #DEF3FF;
 }
 
-.table-component table .pf-c-drawer {
+.expression-container .table-component table .pf-c-drawer {
   --pf-c-drawer__splitter--after--BorderLeftWidth: var(
     --pf-global--BorderWidth--sm
   );
@@ -75,7 +75,7 @@
   bottom: 0;
 }
 
-.table-component table tbody td textarea {
+.expression-container .table-component table tbody td textarea {
   padding: 0.125em;
   margin: 0;
   border: 0;
