Improving clear area for LiteralExpression

--- a/kie-wb-common-react/boxed-expression-editor/src/components/LiteralExpression/LiteralExpression.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/LiteralExpression/LiteralExpression.css
@@ -39,5 +39,9 @@
 }
 
 .literal-expression .literal-expression-body {
+  height: 4em;
+}
 
+.literal-expression .literal-expression-body textarea {
+  padding-bottom: 0;
 }
