Recursive selected expression should be headless

--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -18,6 +18,10 @@
   font-style: normal;
 }
 
+.expression-container .table-component table thead.headless-table {
+  display: none;
+}
+
 .expression-container .table-component table th {
   position: relative;
   border-style: ridge;
