--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -42,26 +42,36 @@
   font-size: smaller;
 }
 
+.expression-container .table-component table th:first-child {
+  padding-left: 1.7em;
+}
+
 .expression-container .table-component table th:not(:first-child) {
   cursor: pointer;
   text-align: center;
   background-color: #DEF3FF;
 }
 
+.expression-container .table-component table tbody tr {
+  display: flex;
+}
+
 .expression-container .table-component table tbody td {
   border-style: ridge;
   padding: 1.1em 0;
   text-align: center;
+  overflow: auto;
 }
 
 .expression-container .table-component table tbody td + td {
   padding: 0;
 }
 
-.expression-container .table-component table tbody td.row-count-cell {
+.expression-container .table-component table tbody td.row-count-cell,
+.expression-container .table-component table tbody .table-row .empty-cell {
   display: inline-block;
   box-sizing: border-box;
-  width: 60px;
+  min-width: 60px;
 }
 
 .expression-container .table-component table .pf-c-drawer__splitter {
@@ -84,8 +94,16 @@
   margin: 0;
   border: 0;
   width: 100%;
-  height: 100%;
   resize: none;
+}
+
+.expression-container .table-component table tbody .table-row .row-remainder-content {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 100%;
+  width: -moz-available;
+  /*noinspection CssInvalidPropertyValue*/
+  width: -webkit-fill-available;
 }
 
 .table-handler .pf-c-popover__arrow {
