LiteralExpression should have a resize handler similar to the other logic type boxed expressions

--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -84,7 +84,7 @@
 }
 
 .expression-container .table-component table .pf-c-drawer__splitter {
-  background-color: #DEF3FF;
+  background-color: inherit;
 }
 
 .expression-container .table-component table .pf-c-drawer {
