--- a/kie-wb-common-react/boxed-expression-editor/src/components/LiteralExpression/LiteralExpression.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/LiteralExpression/LiteralExpression.css
@@ -19,11 +19,33 @@
   height: 100%;
 }
 
-.literal-expression .literal-expression-header {
+.expression-container .literal-expression .pf-c-drawer__splitter {
+  background-color: inherit;
+}
+
+.expression-container .literal-expression .pf-c-drawer {
+  --pf-c-drawer__splitter--after--BorderLeftWidth: var(
+    --pf-global--BorderWidth--sm
+  );
+  position: absolute;
+  min-width: 0.625rem;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.literal-expression .literal-expression-header .expression-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.literal-expression .literal-expression-header {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  position: relative;
   padding: 5px;
   border-style: ridge;
   background-color: #DEF3FF;
@@ -43,8 +65,14 @@
   height: 4em;
 }
 
+.literal-expression .literal-expression-body.headless-body {
+  height: auto;
+  margin-right: 0.5em;
+}
+
 .literal-expression .literal-expression-body textarea {
   padding-bottom: 0;
   width: 100%;
   height: 100%;
+  resize: none;
 }
