Giving entry info sub-cell the ability to be resized + saving width size when changed from default

--- a/kie-wb-common-react/boxed-expression-editor/src/components/ContextExpression/ContextEntryCell.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ContextExpression/ContextEntryCell.css
@@ -16,6 +16,7 @@
 
 .expression-container .context-expression .context-entry .entry-definition {
   cursor: pointer;
+  padding: 0.25em;
 }
 
 .expression-container .context-expression .context-entry .entry-definition .entry-name {
