--- a/kie-wb-common-react/boxed-expression-editor/src/components/ContextExpression/ContextExpression.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ContextExpression/ContextExpression.css
@@ -22,3 +22,12 @@
   font-style: italic;
   color: gray;
 }
+
+.context-expression .context-entry-info-cell,
+.context-expression .context-result {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
