Adding constant for # of rows subcolumn

--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -18,6 +18,11 @@
   font-style: normal;
 }
 
+.expression-container .table-component table thead,
+.expression-container .table-component table tbody {
+  display: table;
+}
+
 .expression-container .table-component table th {
   position: relative;
   border-style: ridge;
