--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -39,7 +39,7 @@
 }
 
 .expression-container .table-component table th .header-cell {
-  height: 3em;
+  height: 55px;
 }
 
 .expression-container .table-component table th .data-type {
