Popover can have autowidth

--- a/kie-wb-common-react/boxed-expression-editor/src/components/PopoverMenu/PopoverMenu.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/PopoverMenu/PopoverMenu.css
@@ -40,7 +40,7 @@
 }
 
 .popover-menu-selector .pf-c-title .selector-menu-title,
-.popover-menu-selector .pf-c-simple-list button {
+.popover-menu-selector .pf-c-menu__item-text {
   font-size: var(--small-font-size);
   font-style: normal;
 }
