--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+.expression-container .table-component {
+  overflow-x: auto;
+}
+
 .expression-container .table-component table {
   font-style: normal;
 }
