Fixing existing tests

--- a/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ExpressionContainer/ExpressionContainer.css
@@ -15,6 +15,7 @@
  */
 
 .expression-container .expression-container-box {
+  display: inline-block;
   border-style: ridge;
   border-color: #39A5DC;
 }
