Top border should be hidden only when header is present

--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -72,7 +72,7 @@
   height: 4em;
 }
 
-.expression-container .table-component table tbody,
+.expression-container .table-component table tbody:not(.missing-header),
 .expression-container .table-component table thead tr + tr,
 .expression-container .table-component table tbody tr + tr {
   margin-top: -1px;
