- Update: tooltip link from 'View or edit this data type' to 'View this data type' - Fix: Tooltip must show a different message for external data types - Update: rename tooltip 'data-field' from 'tooltip' to 'data-type-details-tooltip' - Fix: Now message for custom data types does not mention fields.

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/tooltip/StructureTypesTooltipView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/tooltip/StructureTypesTooltipView.less
@@ -70,6 +70,10 @@
 
     h3 {
       font-weight: 600;
+      max-width: 155px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     h3,
