KOGITO-6083: Render new lines in DMN documentation node description
For more details see:
- https://issues.redhat.com/browse/KOGITO-6083

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/template/dmn-documentation-template.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/template/dmn-documentation-template.html
@@ -52,6 +52,10 @@
             font-weight: bold;
         }
 
+        .kie-dmn-documentation p {
+            white-space: pre-wrap;
+        }
+
         <!--
         /* Font Size */
         -->
